objects/ASI_CRM_TW_Running_Number__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_TW_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Prefix__c</fullName>
        <label>Prefix</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TW_Running_Number__c</fullName>
        <label>Running Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Running Number (TW CRM)</label>
    <listViews>
        <fullName>ASI_CRM_TW_Running_Numbers</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_TW_Description__c</columns>
        <columns>ASI_CRM_TW_Prefix__c</columns>
        <columns>ASI_CRM_TW_Running_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>TW CRM Running Numbers</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_TW_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_TW_Running_Number__c</columns>
        <columns>ASI_CRM_TW_Prefix__c</columns>
        <columns>ASI_CRM_TW_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ASI_CRM_TW_RN-{00000}</displayFormat>
        <label>Running Number (TW CRM) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Running Number (TW CRM)</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_RunningNumber</fullName>
        <active>true</active>
        <label>ASI_CRM_TW_RunningNumber</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>